--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,5 +17,7 @@ jobs:
                   apiToken: ${{ secrets.CF_API_TOKEN }}
                   accountId: ${{ secrets.CF_ACCOUNT_ID }}
                   vars: LOKI_PUSH_URL                      
+                  vars: LOKI_CREDENTIALS                      
               env:
                   LOKI_PUSH_URL: ${{ secrets.LOKI_PUSH_URL }}
+                  LOKI_CREDENTIALS: ${{ secrets.LOKI_CREDENTIALS }}
